--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="container">
       <h2 hidden class="our-company-title-hidden">Our company</h2>
       <ul class="benefits-list">
-
+       <div></div>
         <li class="benefits-list-item">
           <h3 class="title-benefits">Strategy</h3>
           <p class="quality-list_description">
@@ -84,7 +84,7 @@
             deep passion for problem-solving.
           </p>
         </li>
-
+        </div>
       </ul>
       </div>
     </section>
