--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
       <h2 hidden class="our-company-title-hidden">Our company</h2>
       <ul class="benefits-list">
         <li class="benefits-list-item">
+          <div class="icon-container">
           <h3 class="title-benefits">Strategy</h3>
           <p class="quality-list_description">
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
+          </div>
         </li>
 
         <li class="benefits-list-item">
