--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             Our goal is to identify the business problem to walk away with the
             perfect and creative solution.
           </p>
+          <svg class="icon-icon" width="64" height="64">
+            <use href="./images/icons.svg#antena">
+          </svg>
           </div>
         </li>
 
