--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <li class="benefits-list-item">
           <div class="icon-container">
             <svg class="icon-icon" width="64" height="64">
-              <use href="./images/icons.svg#antena">
+              <use href="./images/icons.svg#antena"> </use>
             </svg>
             </div>
           <h3 class="title-benefits">Strategy</h3>
