--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <div class="container">
       <h2 hidden class="our-company-title-hidden">Our company</h2>
       <ul class="benefits-list">
+
         <li class="benefits-list-item">
           <div class="icon-container">
             <svg class="icon-icon" width="64" height="64">
@@ -64,8 +65,13 @@
             perfect and creative solution.
           </p>
         </li>
-
+  
         <li class="benefits-list-item">
+          <div class="icon-container">
+            <sgv class="icon-icon" width="64" height="64">
+              <use href="./images/icon.svg#clock"></use>
+            </sgv>
+          </div>
           <h3 class="title-benefits">Punctuality</h3>
           <p class="quality-list_description">
             Bring the key message to the brand's audience for the best price
