--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <li class="benefits-list-item">
           <div class="icon-container">
             <sgv class="icon-icon" width="64" height="64">
-              <use href="./images/icon.svg#clock"></use>
+              <use href="./images/icons.svg#clock"> </use>
             </sgv>
           </div>
           <h3 class="title-benefits">Punctuality</h3>
@@ -80,6 +80,11 @@
         </li>
 
         <li class="benefits-list-item">
+          <div class="icon-container">
+          <sgv class="icon-icon" width="64" height="64">
+            <use href="./images/icons.svg#diagram"></use>
+          </sgv>
+          </div>
           <h3 class="title-benefits">Diligence</h3>
           <p class="quality-list_description">
             Research and confirm brands that present the strongest digital
