--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
   
         <li class="benefits-list-item">
           <div class="icon-container">
-            <sgv class="icon-icon" width="64" height="64">
+            <svg class="icon-icon" width="64" height="64">
               <use href="./images/icons.svg#clock"> </use>
-            </sgv>
+            </svg>
           </div>
           <h3 class="title-benefits">Punctuality</h3>
           <p class="quality-list_description">
@@ -81,9 +81,9 @@
 
         <li class="benefits-list-item">
           <div class="icon-container">
-          <sgv class="icon-icon" width="64" height="64">
+          <svg class="icon-icon" width="64" height="64">
             <use href="./images/icons.svg#diagram"></use>
-          </sgv>
+          </svg>
           </div>
           <h3 class="title-benefits">Diligence</h3>
           <p class="quality-list_description">
