--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
         </li>
 
         <li class="benefits-list-item">
+          <div class="icon-container">
+          <svg class="icon-icon" width="64" height="64">
+          <use href="./images/icons.svg#astronaut"></use>
+          </svg>
+          </div>
           <h3 class="title-benefits">Technologies</h3>
           <p class="quality-list_description">
             Design practice focused on digital experiences. We bring forth a
