--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
       <div class="container">
       <h2 class="team-title">Our Team</h2>
       <ul class="list-box">
-        
+      <ul class="icon-list">
         <li class="team-box-width team-box">
-          <img class="team-list-img" src="./images/mark-guerrero.jpg" alt="Mark Product Designer" width="264" height="260" />
+        <img class="team-list-img" src="./images/mark-guerrero.jpg" alt="Mark Product Designer" width="264" height="260" />
           <div class="team-position">
           <h3 class="team-list-name">Mark Guerrero</h3>
           <p class="team-list-job">Product Designer</p>
