--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           <div class="team-position">
           <h3 class="team-list-name">Mark Guerrero</h3>
           <p class="team-list-job">Product Designer</p>
-          <ul>
+          <ul class="social">
             <li>
-              
+
             </li>
           </ul>
           </div>
