--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
           <div class="team-position">
           <h3 class="team-list-name">Mark Guerrero</h3>
           <p class="team-list-job">Product Designer</p>
-          <ul class="social">
-            <li>
-
+          <ul class="social-list">
+          <li class="social" style="width: 40px; height: 40px;">
+          <a class="icon-link" >
+          </a>
+          
             </li>
           </ul>
           </div>
