--- a/index.html
+++ b/index.html
@@ -119,10 +119,16 @@
           <p class="team-list-job">Product Designer</p>
           <ul class="social-list">
           <li class="social" style="width: 40px; height: 40px;">
-          <a class="icon-link" >
+          <a class="icon-link">
+            <svg class="icon-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
           </a>
-          
-            </li>
+          </li>
+          <li class="social" style="width: 40px; height: 40px;">
+            <svg class="icon-icon" width="16" height="16">
+              <use href=".images/icons.svg#icon-facebook"></use>
+            </svg>
           </ul>
           </div>
         </li>
