--- a/index.html
+++ b/index.html
@@ -126,9 +126,11 @@
           </a>
           </li>
           <li class="social" style="width: 40px; height: 40px;">
+            <a class="icon-link">
             <svg class="icon-icon" width="16" height="16">
               <use href=".images/icons.svg#icon-facebook"></use>
             </svg>
+            </a>
           </ul>
           </div>
         </li>
