--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
           <div class="team-position">
           <h3 class="team-list-name">Mark Guerrero</h3>
           <p class="team-list-job">Product Designer</p>
+
           <ul class="social-list">
+
           <li class="social" style="width: 40px; height: 40px;">
           <a class="icon-link">
             <svg class="icon-icon" width="16" height="16">
@@ -125,12 +127,30 @@
             </svg>
           </a>
           </li>
+          
           <li class="social" style="width: 40px; height: 40px;">
             <a class="icon-link">
             <svg class="icon-icon" width="16" height="16">
               <use href=".images/icons.svg#icon-facebook"></use>
             </svg>
             </a>
+          </li>
+
+          <li class="social" style="width: 40px; height: 40px;">
+            <a class="icon-link">
+              <svg class="icon-icon" width="16" height="16">
+                <use href=".images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="social" style="width: 40px; height: 40px;">
+            <a class="icon-link">
+              <svg class="icon-icon" width="16" height="16">
+                <use href=".images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
           </ul>
           </div>
         </li>
