--- a/index.html
+++ b/index.html
@@ -161,6 +161,41 @@
           <div class="team-position">
           <h3 class="team-list-name">Tom Ford</h3>
           <p class="team-list-job">Frontend Developer</p>
+
+          <ul class="social-list">
+            <li class="social" style="width: 40px; height: 40px;">
+              <a class="icon-link">
+                <svg class="icon-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social" style="width: 40px; height: 40px;">
+              <a class="icon-link">
+                <svg class="icon-icon" width="16" height="16">
+                  <use href=".images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social" style="width: 40px; height: 40px;">
+              <a class="icon-link">
+                <svg class="icon-icon" width="16" height="16">
+                  <use href=".images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social" style="width: 40px; height: 40px;">
+              <a class="icon-link">
+                <svg class="icon-icon" width="16" height="16">
+                  <use href=".images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+
+          </ul>
           </div>
         </li>
 
