--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <li class="social" style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href=".images/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -182,7 +182,7 @@
             <li class="social" style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href=".images/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -190,7 +190,7 @@
             <li class="social" style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href=".images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
