--- a/index.html
+++ b/index.html
@@ -310,9 +310,11 @@
       <h2 class="portfolio-title">Our Portfolio</h2>
       <ul class="list-container">
 
-        <li class="list-container-width">  
+        <li class="list-container-width"> 
+          <div class="img-list">
           <img class="portfolio-list-img" src="./images/banking-app.jpg" alt="Bank App Screen" width="360"
             height="300" />
+            </div>
             <div class="div-box">
           <h3 class="portfolio-list-title item-title">Banking App</h3>
           <p class="portfolio-list-description item-role">App</p>
