--- a/index.html
+++ b/index.html
@@ -314,6 +314,8 @@
           <div class="img-list">
           <img class="portfolio-list-img" src="./images/banking-app.jpg" alt="Bank App Screen" width="360"
             height="300" />
+            <p class="p-hiden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+            Cloud Storage App</p>
             </div>
             <div class="div-box">
           <h3 class="portfolio-list-title item-title">Banking App</h3>
