--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li class="benefits-list-item">
           <div class="icon-container">
             <svg class="icon-icon" width="64" height="64">
-              <use href="./images/icons.svg#antena"> </use>
+              <use href="./images/icons.svg#antena"></use>
             </svg>
             </div>
           <h3 class="title-benefits">Strategy</h3>
@@ -69,7 +69,7 @@
         <li class="benefits-list-item">
           <div class="icon-container">
             <svg class="icon-icon" width="64" height="64">
-              <use href="./images/icons.svg#clock"> </use>
+              <use href="./images/icons.svg#clock"></use>
             </svg>
           </div>
           <h3 class="title-benefits">Punctuality</h3>
@@ -324,7 +324,11 @@
         </li>
 
         <li class="list-container-width">
+          <div class="img-list">
           <img src="./images/cashless-paymant.jpg" alt="Phone paying cashless" width="360" height="300" />
+          <p class="p-hiden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+          Cloud Storage App</p>
+          </div>
           <div class="div-box">
           <h3 class="portfolio-list-title item-title">Cashless Payment</h3>
           <p class="portfolio-list-description item-role">Marketing</p>
@@ -332,7 +336,11 @@
         </li>
 
         <li class="list-container-width">
+          <div class="img-list">
           <img src="./images/meditation-app.jpg" alt="Laptop with a phone" width="360" height="300" />
+          <p class="p-hiden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+          Cloud Storage App</p>
+          </div>
           <div class="div-box">
           <h3 class="portfolio-list-title item-title">Meditation App</h3>
           <p class="portfolio-list-description item-role">App</p>
@@ -340,7 +348,11 @@
         </li>
 
         <li class="list-container-width">
+          <div class="img-list">
           <img src="./images/taxi-service.jpg" alt="Deck of a taxi car with a wheel" width="360" height="300" />
+          <p class="p-hiden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+          Cloud Storage App</p>
+          </div>
           <div class="div-box">
           <h3 class="portfolio-list-title item-title">Taxi Service</h3>
           <p class="portfolio-list-description item-role">Marketing</p>
@@ -348,7 +360,11 @@
         </li>
 
         <li class="list-container-width">
+          <div class="img-list">
           <img src="./images/screen-ilustrations.jpg" alt="Phone with illustrations" width="360" height="300" />
+          <p class="p-hiden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+          Cloud Storage App</p>
+          </div>
           <div class="div-box">
           <h3 class="portfolio-list-title item-title">Screen Illustrations</h3>
           <p class="portfolio-list-description item-role">Design</p>
@@ -356,8 +372,12 @@
         </li>
 
         <li class="list-container-width">
+          <div class="img-list">
           <img src="./images/online-courses.jpg" alt="Woman having headphones and a phone learning courses" width="360"
             height="300" />
+            <p class="p-hiden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+            Cloud Storage App</p>
+            </div>
             <div class="div-box">
           <h3 class="portfolio-list-title item-title">Online Courses</h3>
           <p class="portfolio-list-description item-role">Marketing</p>
