--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
            style="width: 40px; height: 40px;">
           <a class="icon-link">
             <svg class="icon-icon" width="16" height="16">
-              <use href="./images/icons.svg#icon-instagram"></use>
+              <use href="./images/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
           </li>
@@ -133,7 +133,7 @@
           style="width: 40px; height: 40px;">
             <a class="icon-link">
             <svg class="icon-icon" width="16" height="16">
-              <use href=".images/icons.svg#icon-facebook"></use>
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
             </svg>
             </a>
           </li>
@@ -142,7 +142,7 @@
            style="width: 40px; height: 40px;">
             <a class="icon-link">
               <svg class="icon-icon" width="16" height="16">
-                <use href=".images/icons.svg#icon-twitter"></use>
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -151,7 +151,7 @@
           style="width: 40px; height: 40px;">
             <a class="icon-link">
               <svg class="icon-icon" width="16" height="16">
-                <use href=".images/icons.svg#icon-linkedin"></use>
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
@@ -172,7 +172,7 @@
             style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -181,7 +181,7 @@
             style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook"></use>
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -190,7 +190,7 @@
              style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -199,7 +199,7 @@
             style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -219,7 +219,7 @@
             style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -228,7 +228,7 @@
             style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook"></use>
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -237,7 +237,7 @@
             style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -246,7 +246,7 @@
              style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -266,7 +266,7 @@
              style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram"></use>
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -275,7 +275,7 @@
             style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-facebook"></use>
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -284,7 +284,7 @@
              style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-twitter"></use>
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -293,7 +293,7 @@
             style="width: 40px; height: 40px;">
               <a class="icon-link">
                 <svg class="icon-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
