--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="header-nav">
       <a class="logo" href="./index.html">Web<span style="color: #2e2f42">Studio</span></a>
       <ul class="link-menu">
-        <li class="menu-items"><a class="link" href="./index.html">Studio</a></li>
+        <li class="menu-items after-nav"><a class="link" href="./index.html">Studio</a></li>
         <li class="menu-items"><a class="link" href="">Portfolio</a></li>
         <li class="menu-items"><a class="link" href="">Contacts</a></li>
       </ul>
