--- a/index.html
+++ b/index.html
@@ -391,12 +391,27 @@
 <!-- Footer Section -->
   <footer class="footer footer-section footer-container section">
     <div class="container">
+      <div class="social-footer">
     <a href="./index.html" class="logo">Web<span class="design-logo">Studio</span>
     </a>
     <p class="footer-paragraph p-container">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
     </p>
+    </div>
+    <div>
+      <p class="social-p">Social media</p>
+      <ul class="social-ul">
+
+        <li class="social-footer-list">
+         <a class="social-footer-link" href=""></a>
+        </li>
+        
+        <li class="social-footer-list">
+          <a class="social-footer-link" href=""></a>
+        </li>
+      </ul>
+    </div>
     </div>
   </footer>
 
