--- a/index.html
+++ b/index.html
@@ -404,12 +404,37 @@
       <ul class="social-ul">
 
         <li class="social-footer-list">
-         <a class="social-footer-link" href=""></a>
+         <a class="social-footer-link">
+         <svg class="icon-social" width="24" height="24">
+          <use href="/images/symbol-defs.svg#icon-instagram"></use>
+         </svg>
+         </a>
         </li>
         
         <li class="social-footer-list">
-          <a class="social-footer-link" href=""></a>
+          <a class="social-footer-link">
+            <svg class="icon-social" width="24" height="24">
+              <use href="/images/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
         </li>
+
+          <li class="social-footer-list">
+            <a class="social-footer-link">
+              <svg class="icon-social" width="24" height="24">
+                <use href="/images/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="social-footer-list">
+            <a class="social-footer-link">
+              <svg class="icon-social" width="24" height="24">
+                <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+          
       </ul>
     </div>
     </div>
