--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <li class="benefits-list-item">
           <div class="icon-container">
             <svg class="icon-icon" width="64" height="64">
-              <use href="./images/icons.svg#antena"></use>
+              <use href="./images/symbol-defs.svg#icon-antena"></use>
             </svg>
             </div>
           <h3 class="title-benefits">Strategy</h3>
@@ -69,7 +69,7 @@
         <li class="benefits-list-item">
           <div class="icon-container">
             <svg class="icon-icon" width="64" height="64">
-              <use href="./images/icons.svg#clock"></use>
+              <use href="./images/symbol-defs.svg#icon-clock"></use>
             </svg>
           </div>
           <h3 class="title-benefits">Punctuality</h3>
@@ -82,7 +82,7 @@
         <li class="benefits-list-item">
           <div class="icon-container">
           <svg class="icon-icon" width="64" height="64">
-            <use href="./images/icons.svg#diagram"></use>
+            <use href="./images/symbol-defs.svg#icon-diagram"></use>
           </svg>
           </div>
           <h3 class="title-benefits">Diligence</h3>
@@ -95,7 +95,7 @@
         <li class="benefits-list-item">
           <div class="icon-container">
           <svg class="icon-icon" width="64" height="64">
-          <use href="./images/icons.svg#astronaut"></use>
+          <use href="./images/symbol-defs.svg#icon-astronaut"></use>
           </svg>
           </div>
           <h3 class="title-benefits">Technologies</h3>
