--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <li class="social-footer-list">
          <a class="social-footer-link">
          <svg class="icon-social" width="24" height="24">
-          <use href="/images/symbol-defs.svg#icon-instagram"></use>
+          <use href="./images/symbol-defs.svg#icon-instagram"></use>
          </svg>
          </a>
         </li>
@@ -414,7 +414,7 @@
         <li class="social-footer-list">
           <a class="social-footer-link">
             <svg class="icon-social" width="24" height="24">
-              <use href="/images/symbol-defs.svg#icon-facebook"></use>
+              <use href="./images/symbol-defs.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -422,7 +422,7 @@
           <li class="social-footer-list">
             <a class="social-footer-link">
               <svg class="icon-social" width="24" height="24">
-                <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                <use href="./images/symbol-defs.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -430,7 +430,7 @@
           <li class="social-footer-list">
             <a class="social-footer-link">
               <svg class="icon-social" width="24" height="24">
-                <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
