--- a/index.html
+++ b/index.html
@@ -119,42 +119,39 @@
       <ul class="list-box">
         <li class="team-box-width team-box">
         <img class="team-list-img" src="./images/mark-guerrero.jpg" alt="Mark Product Designer" width="264" height="260" />
+        
           <div class="team-position">
           <h3 class="team-list-name">Mark Guerrero</h3>
           <p class="team-list-job">Product Designer</p>
 
           <ul class="social-list">
 
-          <li class="social"
-           style="width: 40px; height: 40px;">
-          <a class="icon-link">
+          <li class="social">
+          <a href=""  class="icon-link">
             <svg class="icon-icon" width="16" height="16">
               <use href="./images/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
           </li>
 
-          <li class="social" 
-          style="width: 40px; height: 40px;">
-            <a class="icon-link">
+          <li class="social">
+            <a href="" class="icon-link">
             <svg class="icon-icon" width="16" height="16">
               <use href="./images/symbol-defs.svg#icon-facebook"></use>
             </svg>
             </a>
           </li>
 
-          <li class="social"
-           style="width: 40px; height: 40px;">
-            <a class="icon-link">
+          <li class="social">
+            <a href="" class="icon-link">
               <svg class="icon-icon" width="16" height="16">
                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
 
-          <li class="social" 
-          style="width: 40px; height: 40px;">
-            <a class="icon-link">
+          <li class="social">
+            <a href="" class="icon-link">
               <svg class="icon-icon" width="16" height="16">
                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg>
