--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <ul class="list-box">
         <li class="team-box-width team-box">
         <img class="team-list-img" src="./images/mark-guerrero.jpg" alt="Mark Product Designer" width="264" height="260" />
-        
+
           <div class="team-position">
           <h3 class="team-list-name">Mark Guerrero</h3>
           <p class="team-list-job">Product Designer</p>
@@ -308,7 +308,7 @@
     </section>
 <!-- Section 4 -->
     <section class="section-four-container">
-      <div class="container">
+      <div class="container title-div">
       <h2 class="portfolio-title">Our Portfolio</h2>
       <ul class="list-container">
 
