--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
       <ul class="social-ul">
 
         <li class="social-footer-list">
-         <a class="social-footer-link">
+         <a href="" class="social-footer-link">
          <svg class="icon-social" width="24" height="24">
           <use href="./images/symbol-defs.svg#icon-instagram"></use>
          </svg>
@@ -414,7 +414,7 @@
         </li>
         
         <li class="social-footer-list">
-          <a class="social-footer-link">
+          <a href="" class="social-footer-link">
             <svg class="icon-social" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-facebook"></use>
             </svg>
@@ -422,7 +422,7 @@
         </li>
 
           <li class="social-footer-list">
-            <a class="social-footer-link">
+            <a href="" class="social-footer-link">
               <svg class="icon-social" width="24" height="24">
                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
               </svg>
@@ -430,7 +430,7 @@
           </li>
 
           <li class="social-footer-list">
-            <a class="social-footer-link">
+            <a href="" class="social-footer-link">
               <svg class="icon-social" width="24" height="24">
                 <use href="./images/symbol-defs.svg#icon-linkedin"></use>
               </svg>
